--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             дотронешься. Судя по всему, эта способность так же способна и убить человека. Только
                             сентимонстры,
                             создания квами талисмана павлина, Дуусу, не разрушаются полностью, но повреждаются.</p>
-                        <p>Драматизм истории кру тится вокруг семьи Адриана, и очень жаль, что этому уделяется мало
+                        <p>Драматизм истории крутится вокруг семьи Адриана, и очень жаль, что этому уделяется мало
                             времени.
                             Как
                             мы узнаём в начале, до событий сериала мать Адриана, Эмили Агрест, умирает. Примерно тогда
@@ -93,7 +93,7 @@
                             Нуара,
                             чтобы исполнить своё желание. Слияние камней выполнит его желание и вселенная тогда
                             разрушится,
-                            создастся иная, только ради баланса и чисто логически в ней что-то катастлфически изменится,
+                            создастся иная, только ради баланса и чисто логически в ней что-то радикально изменится,
                             поэтому
                             героям нельзя этого допустить. Как позже узнает зритель, Бражник — отец Адриана, Габриэль, и
                             он
@@ -129,8 +129,8 @@
                             кольцах семьи Грэм де Ванили, Адриана создала Эмили, а Феликса — его отец. Об этом говорит
                             то, что они оба погибли по неизвестным причинам до событий сериала, вероятно, от
                             использования талисмана павлина. Так же нам явно дали понять в некоторых сериях, что
-                            Габриэль подавляет Адриана, потирая обручальное кольцо. Это очень напоминает управление
-                            сентимонстром. А в серии "Габриэль Агрест" он буквально угрожает Феликсу развоплощением по
+                            Габриэль подавляет волю Адриана, потирая обручальное кольцо. Это очень напоминает управление
+                            сентимонстром. А в серии «Габриэль Агрест» он буквально угрожает Феликсу развоплощением по
                             щелчку пальцев. Очевидно, Феликс знает о своём происхождении. Более того, в финале сезона,
                             когда он затесался в компанию героев и предал их, просил прощения он далеко не перед Леди
                             Баг, а перед другими сентимонстрами Бражника, которых не мог спасти. Вероятно, поэтому он и
