--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                     <div class="textbox">
                         <p>Этот сайт посвящён персонажу мультфильма «Леди Баг и Супер Кот», Адриану Агресту, так же
                             известному
-                            как Кот Нуар. Вы можете повосхищаться его красотой чуть ниже, листая слайдер, пообщаться с
-                            другими фанатами или
+                            как Кот Нуар. Вы можете повосхищаться его красотой чуть ниже, листая слайдер, поделиться своим мнением или
                             ознакомиться
                             с материалом по сериалу, на который выше предоставлены ссылки.</p>
                         <p>Адриан — второй основной персонаж мультсериала (жаль, что не первый, но это немного другая
