--- a/index.html
+++ b/index.html
@@ -26,23 +26,32 @@
                     <li>
                         <p>Ссылки</p>
                         <ul class="menu2">
-                            <li><a class="primer" href="https://hd.kinopoisk.ru/film/4493cb2bba6408898e37016b2db26751">
+                            <li>
+                                <a class="primer" href="https://hd.kinopoisk.ru/film/4493cb2bba6408898e37016b2db26751">
                                     <p>Сериал на Кинопоиске</p>
-                                </a></li>
+                                </a>
+                            </li>
                             <li><a class="primer" href="https://lady-bug.online/">
                                     <p>Фан-сайт с сериями</p>
-                                </a></li>
-                            <li><a class="primer"
+                                </a>
+                            </li>
+                            <li>
+                                <a class="primer"
                                     href="https://miraculousladybug.fandom.com/ru/wiki/Miraculous_Ladybug_Вики">
                                     <p>Вики по сериалу</p>
-                                </a></li>
-                            <li><a class="primer"
+                                </a>
+                            </li>
+                            <li>
+                                <a class="primer"
                                     href="https://miraculousladybug.fandom.com/wiki/Miraculous_Ladybug_Wiki">
                                     <p>Англоязычная вики</p>
-                                </a></li>
-                            <li><a class="primer" href="https://instagram.com/adrienagrestebrand?igshid=YmMyMTA2M2Y=">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="primer" href="https://instagram.com/adrienagrestebrand?igshid=YmMyMTA2M2Y=">
                                     <p>Инстаграм Адриана</p>
-                                </a></li>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
