--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="obch">
         <div class="header">
-            <div class="picture"><img src="https://raw.githubusercontent.com/MoodyNaggets/site/main/menu.png"></div>
+            <div class="picture"><img alt="" src="https://raw.githubusercontent.com/MoodyNaggets/site/main/menu.png"></div>
             <div class="menu">
                 <ul class="menu1">
                     <li onclick="location.href='#1'">
