--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="wrapper" id="2">
                         <div class="slider">
                             <div class="slider_item">
-                                <img
+                                <img alt="" src
                                     data-lazy="https://sun9-43.userapi.com/impf/vLl54H7gUyrSuUFh1kP2_Lt4MpaluLG8aV1O4A/LLxsHDKcbV8.jpg?size=1280x720&quality=96&sign=6c0b6ad6122459b72c45c5a1b7f4505f&type=album" />
                             </div>
                             <div class="slider_item">
