--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             </div>
                             <div class="slider_item">
                                 <img
-                                    alt="" src"https://sun9-59.userapi.com/impf/VzSqXPzbEzCQxdERghr1dfYEdRZ6dA9nyhm6Vw/IfYYJR40-PE.jpg?size=1280x720&quality=96&sign=8940463f832fe23902689c9355ee7767&type=album" />
+                                    alt="" src="https://sun9-59.userapi.com/impf/VzSqXPzbEzCQxdERghr1dfYEdRZ6dA9nyhm6Vw/IfYYJR40-PE.jpg?size=1280x720&quality=96&sign=8940463f832fe23902689c9355ee7767&type=album" />
                             </div>
                             <div class="slider_item">
                                 <img
