--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Фан-клуб Адриана Агреста</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/MoodyNaggets/site/main/эээ.png/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
