--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
                             безэмоциональным поведением был больше похож на Феликса, который кузен. Можно сказать, что
                             из
                             прототипа слепили двух разных персонажей. Но мы здесь любим всех троих. </p>
+                        <p>К слову об Феликсе Агресте. Судя по концепт-артам, ранний Кот Нуар должен был так же владеть
+                            способностью «чёрная дыра», что образовывает бездонную яму, и «чёрный шторм», что буквально
+                            удар Катаклизмом на расстоянии, почти как в серии «Кот Блан», где Адриана акуматизировал
+                            отец в параллельной временной ветке. Жаль, что за четыре сезона сценаристы так и не
+                            позволили ему прокачаться. Первые задумки сериала довольно увлекательные, кстати. По одной
+                            из них этот персонаж должен был быть после аварии инвалидом, и он постоянно ходил бы с
+                            тростью. И только в обличии Кота Нуара он становился бы здоровым как прежде. Жаль, что от
+                            этого отказались, люблю отборные страдания персонажей.</p>
                         <p>Лично я из-за странного поведения этой семейки придерживаюсь теории, что либо Феликс, либо
                             Адриан, либо оба — сентимонстры. Теория об этом существовала давно, но именно в четвёртом
                             сезоне появились явные намёки. Амоки сенти-близнецов наверняка хранятся в обручальных
