--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             безэмоциональным поведением был больше похож на Феликса, который кузен. Можно сказать, что
                             из
                             прототипа слепили двух разных персонажей. Но мы здесь любим всех троих. </p>
-                        <p>К слову об Феликсе Агресте. Судя по концепт-артам, ранний Кот Нуар должен был так же владеть
+                        <p>К слову о Феликсе Агресте. Судя по концепт-артам, ранний Кот Нуар должен был так же владеть
                             способностью «чёрная дыра», что образовывает бездонную яму, и «чёрный шторм», что буквально
                             удар Катаклизмом на расстоянии, почти как в серии «Кот Блан», где Адриана акуматизировал
                             отец в параллельной временной ветке. Жаль, что за четыре сезона сценаристы так и не
