--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
     <title>Фан-клуб Адриана Агреста</title>
     <link rel="stylesheet" href="style.css">
 </head>
