--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="yandex-verification" content="82aaa3c7f3a2f96e" />
     <title>Фан-клуб Адриана Агреста</title>
     <link rel="stylesheet" href="style.css">
 </head>
